tests/baselines/reference/for-of16.errors.txt
for-of16.ts(8,11): error TS2488: Type 'MyStringIterator' must have a '[Symbol.iterator]()' method that returns an iterator.
for-of16.ts(10,11): error TS2488: Type 'MyStringIterator' must have a '[Symbol.iterator]()' method that returns an iterator.


==== for-of16.ts (2 errors) ====
    class MyStringIterator {
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var v: string;
    for (v of new MyStringIterator) { } // Should fail
              ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MyStringIterator' must have a '[Symbol.iterator]()' method that returns an iterator.
!!! related TS2489 for-of16.ts:8:11: An iterator must have a 'next()' method.
    
    for (v of new MyStringIterator) { } // Should still fail (related errors should still be shown even though type is cached).
              ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MyStringIterator' must have a '[Symbol.iterator]()' method that returns an iterator.
!!! related TS2489 for-of16.ts:10:11: An iterator must have a 'next()' method.